--- a/css/ficha.css
+++ b/css/ficha.css
@@ -65,10 +65,11 @@ main{
     background-color:rgb(0,100,135);
 }
 .cachorrineo{
-    background-image: url("../imagens/doberman-macho-brincalhao-grande.jpg");
+    background-position: center;
     background-repeat: no-repeat;
     width: 650px;
     height:858px;
+    background-size: 100% auto;
     top: 110px; 
     left: 40px;  
     position: relative; 
