--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,9 @@
     margin: 0 auto;
     right: 350px;
 }
+.carousel-inner img {
+    width: 100% !important;
+  }
 .cabecalho .aprender{  
     display: flex;
     align-items: center;
