melhorei o width do index

--- a/css/index.css
+++ b/css/index.css
@@ -37,8 +37,7 @@
     top: 350px;
 }
 .caixa{
-    position: relative;
-    top:323px;
+    position: relative; 
     height: 600px;
     background-color: rgb(255, 81, 85);
 }
@@ -59,32 +58,32 @@
 .sobre-nos{
     position: absolute;
     padding-top: 130px;
-    left: 300px;
+    left:270px ;
     line-height: 3em;
+   
 }
 .sobre-nos p{
-    top: -110px;
     font-size: 25px;
     width: 70ch;
-    position: absolute;
+    position: relative;
     color: rgb(255, 255, 255);
+    margin: 0 auto;
+    height: auto;
 }
 .engloba{
     position: relative;
-    height: 300px;
 }
 .saiba-mais{
     font-size: 25px;
     position: relative;
     width: 10ch;
     height: 30px;
-    left: 100px;
+    margin: 0 auto;
     top: 0px; 
     color: rgb(255, 255, 255);
 }
 .rodape{
     position: relative;
-    top:323px;
     height: 300px;
     background-color:rgb(0,100,135);
 }
